--- a/react/index.html
+++ b/react/index.html
@@ -6,7 +6,9 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta name="tiktok-verification" content="tiktok-developers-site-verification=CUMrSeQgmdfEakMetrixFvnJJ6W3HlhB" />
+
+    <title>Technician</title>
   </head>
   <body>
     <div id="root"></div>
